--- a/lab1/styles.css
+++ b/lab1/styles.css
@@ -6,7 +6,7 @@
 
 body {
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
+        background-color: #e8d6c1;
         color: #333;
         line-height: 1.6;
 }
@@ -36,6 +36,12 @@ nav a {
     text-decoration: none;
     color: #333;
     font-weight: 500;
+}
+
+nav a:hover {
+    color: #34bc58;
+    text-decoration: underline;
+    transition: 0.3s;
 }
 .container {
   display: flex;
@@ -139,10 +145,6 @@ h4 {
   margin-top: 30px;
 }
 
-.info {
-  text-align: left;
-}
-
 .form {
   display: flex;
   flex-direction: column;
@@ -185,3 +187,21 @@ h4 {
     height: 100%;
     object-fit: cover;
 } 
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.social-icons a {
+  font-size: 28px;
+  color: #333;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.social-icons a:hover {
+  color: #007BFF; 
+  transform: scale(1.2);
+}
